data/tei_aligned/mineria-de-datos-en-internet-archive/code_mineria-de-datos-en-internet-archive_12.txt
for resultado in buscar:
print resultado['identifier']
File "", line 2
   print resultado['identifier']
      ^
IndentationError: expected an indented block
